# input_manager

./: .gitignore  README.md  evdev_code_tester.py  main.py  package.xml  setup.cfg  setup.py
config/: READONLY_example_config.yaml  default_cfg.json  default_config.yaml  dev_config.yaml  readme.md  test_config.yaml
hot_configs/: readme.md
input_manager/: app_ui.py  device_worker.py  evdev_code_tester.py  main.py  manager_node.py
install/: local_setup.sh  setup.sh
install/input_manager/share/input_manager/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/input_manager/share/input_manager/config/: READONLY_example_config.yaml  dev_config.yaml
launch/: input_manager.launch.py
log/: latest_build
